--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ a:visited { color: #205caa; }
     color:black;
     line-height:56px;
     font-size:20px;
-    padding:0em 0.5em;
+    padding:0em 0.25em;
 }
 
 /*
@@ -153,7 +153,7 @@ a:visited { color: #205caa; }
 .site-footer li,
 .site-footer p {
   font-size: 15px;
-  letter-spacing: -.3px;
+  letter-spacing: 0px;
   color: #828282;
 }
 
@@ -197,6 +197,25 @@ a:visited { color: #205caa; }
   color: #818181;
 }
 
+.about-me
+{
+    font-size:1.2em;
+    line-height:1.5em;
+}
+.about-me:before,
+.about-me:after { content:""; display:table; }
+.about-me:after { clear: both; }
+
+
+/*Document styles*/
+/* ----------------------------------------------------------*/
+
+.document
+{
+    margin:100px auto 10px;
+    display:block;
+    width:1000px;
+}
 
 /* Post styles */
 /* ----------------------------------------------------------*/
