--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header class="site-header">
     <div class="header-wrap">
-        <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <img class="site-title" src="/img/profile.jpg" height="50px" style="margin-right:10px;">
+        <a class="site-title" href="{{ site.baseurl }}/"><font style="color:grey">kumar</font>AYUSH</a>
         <ul class="site-nav">
             {% for page in site.pages %}
                 {% if page.title %}<li><a class="page-link" href="{{ page.url }}">{{ page.title }}.<a/></li>{% endif %}
