--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,12 @@
 ---
-layout: default
+layout: home
 ---
 <div class="post">
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-  </header>
+    <div class="page-title">
+      <h1>{{ page.title }}</h1>
+    </div>
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+      {{ content }}
 
 </div>
