--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,19 @@ a:visited { color: #205caa; }
   background-color: #fff;
 }
 
+.page-title
+{
+    text-decoration:none;
+    font-weight:bold;
+    font-size:2em;
+    color:black;
+}
+
+.posts h3
+{
+    font-size:20px;
+}
+
 
 /* Home styles */
 /* ----------------------------------------------------------*/
@@ -199,6 +212,7 @@ a:visited { color: #205caa; }
 
 .about-me
 {
+    padding:0px 10px;
     font-size:1.2em;
     line-height:1.5em;
 }
@@ -214,7 +228,7 @@ a:visited { color: #205caa; }
 {
     margin:100px auto 10px;
     display:block;
-    width:1000px;
+    max-width:1000px;
 }
 
 /* Post styles */
@@ -408,6 +422,22 @@ a:visited { color: #205caa; }
 
   .wrap { padding: 0 12px; }
 
+  .site-nav
+  {
+      float:left;
+  }
+
+  .site-header
+  {
+      height:auto;
+  }
+  
+  .document
+  {
+      margin-top:200px;
+  }
+
+  /*
   .site-nav {
     position: fixed;
     z-index: 10;
@@ -446,6 +476,7 @@ a:visited { color: #205caa; }
     padding: 5px 10px;
     margin: 0;
   }
+  */
 
   .post-header h1 { font-size: 36px; }
   .post-content h2 { font-size: 28px; }
