--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <div class="about-me">
     <div id="text-content">
         <a></a>
-        <p>I'm an Engineering Physics sophomore at <a href = 'http://iitb.ac.in'>Indian Institute of Technology, Bombay</a></p>
+        <p>I'm an Engineering Physics sophomore at <a target="_blank" href = 'http://iitb.ac.in'>Indian Institute of Technology, Bombay</a></p>
         <br />
         <p>The vast variety of popular science material on astronomy inspired me since childhood. I wanted to be an 'astrophysicist' before I really understood what it means. I brushed serious strokes towards the subject when I was blessed with the opportunity to represent India twice at the International Astronomy Olympiads in 2012 and 2013, where I bagged silver medals.</p>
         <p>And then I was a part of two research nurture camps which gave me a flavor of research in the big wide world. That strengthened my childhood resolve. My current interests include <em>Computational</em> and <em>High Energy Astrophysics</em>, though I am highly malleable towards exploring other areas</p>
@@ -10,6 +10,6 @@
         <p>Learning violin has always been a dream, and I have recently taken this up as seriously. I am 4 months into my training now. </p>
         <br />
         <p>I love to cook, travel and socialize. My mood is usually a superposition of psychopath, mad hatter, party animal and curious being and may collapse into any of these when you meet me.</p><br />
-        <p>For more serious insights into my life and work, please take a look at my <a href = 'cv.pdf'>CV</a></p>
+        <p>For more serious insights into my life and work, please take a look at my <a href = '/media/cv.pdf'>CV</a></p>
     </div>
 </div>
