framework for talks

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,11 @@ a:visited { color: #205caa; }
     font-size:20px;
 }
 
+.link_blue
+{
+    color:#2a7ae2;
+}
+
 
 /* Home styles */
 /* ----------------------------------------------------------*/
