--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: home
 <div class="post">
 
     <div class="page-title">
-      <h1>{{ page.title }}</h1>
+      <h1>{{ page.heading }}</h1>
     </div>
 
       {{ content }}
