--- a/css/main.css
+++ b/css/main.css
@@ -240,6 +240,8 @@ a:visited { color: #205caa; }
 /* Post styles */
 /* ----------------------------------------------------------*/
 
+.post {padding: 0 10px;}
+
 .post-header { margin: 10px 0 30px; }
 
 .post-header h1 {
