--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
             {% for page in site.pages %}
                 {% if page.title %}<li><a class="page-link" href="{{ page.url }}">{{ page.title }}.<a/></li>{% endif %}
             {% endfor %}
+            <li><a class="page-link" href="/media/cv.pdf">CV.<a/></li>
         </ul>
     </div>
 </header>
