changing to collections, jekyll 3 style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <a class="site-title" href="{{ site.baseurl }}/"><font style="color:grey">kumar</font>AYUSH</a>
         <ul class="site-nav">
             {% for page in site.pages %}
-                {% if page.title %}<li><a class="page-link" href="{{ page.url }}">{{ page.title }}.<a/></li>{% endif %}
+                {% if page.title %}<li><a class="page-link" href="{{ page.url }}">{{ page.title }}.</a></li>{% endif %}
             {% endfor %}
             <li><a class="page-link" href="/media/cv.pdf">CV.<a/></li>
         </ul>
